loleaflet/css/jsdialogs.css
/* ... */
.ui-listbox option {
	font-weight: normal;
	display: block;
	white-space: nowrap;
	min-height: 1.2em;
	padding: 0 5px;
}

.ui-listbox::-ms-expand {
	display: none;
}

.ui-listbox-arrow {
	content: '';
	background: url('images/jquery-ui-lightness/ui-icons_222222_256x240.png') no-repeat transparent;
	background-position: -67px -18px;
	display: inline-block;
	width: 11px;
	height: 11px;
	position: relative;
	top: 1px;
	left: -16px;
	cursor: pointer;
	pointer-events: none;
}

.ui-listbox[disabled='disabled'] ~ .ui-listbox-arrow {
	opacity: 0.5;
	cursor: auto;
}

/* buttons: btns.css */

/* Icon View */

.ui-iconview {
	overflow: scroll;
	display: inline-flex;
	display: -ms-inline-flexbox;
	flex-wrap: wrap;
	justify-content: space-between;
}

.ui-iconview.mobile-wizard {
	justify-content: space-around;
}

@supports (display: flex) {
	.ui-iconview-entry {
		flex: 1;
	}
}

.ui-iconview-entry {
	float: left;
	text-align: center;
	position: relative;
	flex-direction: row;
	align-self: center;
	border: 2px solid transparent;
	border-radius: 3px;
}

.ui-iconview-entry.selected {
	border: 2px solid gray;
}

/* Autofilter dropdown */

.autofilter.row {
	display: table-row;
}

.autofilter.cell {
	display: table-cell;
	vertical-align: middle;
	padding: 2px;
}

.autofilter-container {
	background-color: white;
	border: solid 1px silver;
	position: absolute;
	z-index: 1105;
	padding: 10px;
	font-family: var(--oxool-font);
}

.autofilter-container #menu.ui-treeview .ui-treeview-body {
	height: auto;
	width: 100%;
	padding: 8px 1px;
}

.autofilter-container #toggle_all.checkbutton {
	display: flex;
}

.autofilter-container #menu + #search_edit {
	display: block;
}

#mobile-wizard #toggle_all.checkbutton + #select_current,
.autofilter-container #select_current {
	background: url('images/cmd/checkbox.svg') no-repeat center;
}

.autofilter-container #select_current {
	height: 16px;
	width: 16px;
	margin: 8px;
	border: none;
}

#mobile-wizard #toggle_all.checkbutton + #select_current + #unselect_current,
.autofilter-container #unselect_current {
	background: url('images/lc_checkboxoff.svg') no-repeat center;
}

.autofilter-container #unselect_current {
	height: 16px;
	width: 16px;
	margin: 8px 8px 8px 0px;
	border: none;
}

.autofilter-container #unselect_current img,
.autofilter-container #select_current img {
	display: none;
}

.autofilter-container #toggle_all.checkbutton > label,
.autofilter-container #toggle_all.checkbutton > input {
	height: 18px;
	line-height: normal;
}

.autofilter-container #check_tree_box.ui-treeview .ui-treeview-body,
.autofilter-container #check_list_box.ui-treeview .ui-treeview-body {
	width: 100%;
	min-width: 200px;
	max-height: 150px;
}

.autofilter-container-submenu > .autofilter-container {
	padding: 0px;
}

.autofilter-container-submenu .autofilter.root-container .ui-treeview {
	border-color: transparent;
}

/* Word count dialog */

#label9, #documentlabel-mobile {
	color: #636363 !important;
}

#documentlabel-mobile {
	padding-top: 10px;
}

#mobile-wizard #wordslabel,
#mobile-wizard #inclspaceslabel,
#mobile-wizard #exclspaceslabel,
#mobile-wizard #cjkcharsft,
#mobile-wizard #wordslabel2,
#mobile-wizard #inclspaceslabel2,
#mobile-wizard #exclspaceslabel2,
#mobile-wizard #cjkcharsft2
{
	float: left !important;
	clear: left !important;
	width: 70% !important;
	color: #636363 !important;
}

#mobile-wizard #selectwords,
#mobile-wizard #selectchars,
#mobile-wizard #selectcharsnospaces,
#mobile-wizard #selectcjkchars,
#mobile-wizard #docwords,
#mobile-wizard #docchars,
#mobile-wizard #doccharsnospaces,
#mobile-wizard #doccjkchars
{
	float: right !important;
	clear: right !important;
	width: 20% !important;
	border-bottom: none !important;
	color: #636363 !important;
}

/* Dialog-specific excelptions*/
#DefineNameDialog .cell.jsdialog,
#ManageNamesDialog .cell.jsdialog {
	padding-left: 0px;
}

#table-Selection .jsdialog.ui-listbox {
	margin: 8px 2px 2px;
}

#SelectSourceDialog .ui-frame-label {
	display: none;
}

#hideitems {
	border: none;
}

/* Fontwork dialog */

#FontworkGalleryDialog #ctlFavoriteswin {
	width: 400px;
	height: 400px;
}
#FontworkGalleryDialog #label1 {
	display: none;
}

/* Macros dialos */

#MacroWarnMedium p {
	max-width: 400px;
	color: #333;
	text-transform: none;
}

#MacroSelectorDialog #helpmacro {
	margin-bottom: 8px;
	text-transform: none;
	font-size: 12px;
}

#MacroSelectorDialog #table-box2 {
	width: auto;
}

#MacroSelectorDialog #table-box2 > .row > .cell.jsdialog {
	width: auto;
}

#MacroSelectorDialog #table-box2 > .row > .cell.jsdialog:first-of-type {
	width: 47%;
}

#MacroSelectorDialog #table-frame1 {
	width: auto;
	margin-left: 47%;
}

#MacroSelectorDialog #description {
	text-transform: none;
}

#MacroSelectorDialog #table-frame3 {
	width: 100%;
}

#MacroSelectorDialog #table-frame3 .jsdialog.ui-alignment,
#MacroSelectorDialog #table-frame2,
#MacroSelectorDialog #table-frame2 .vertical.jsdialog.ui-alignment {
	width: auto;
}

#MacroSelectorDialog #commands,
#MacroSelectorDialog #categories {
	height: 150px;
}

#MacroSelectorDialog #categories {
	box-sizing: border-box;
	border-color: transparent;
	padding-right: 8px
}

#MacroSelectorDialog #categories .ui-treeview-entry.selected {
	color: #222;
	background-color: #dfdfdf;
	border-radius: 3px;
	border-bottom-right-radius: 8px;
	border-top-right-radius: 8px;
}

#MacroSelectorDialog #categories .ui-treeview-entry.selected::after {
	margin-right: -6px;
	margin-right: -11px;
	color: #dfdfdf;
	content: '\23F5';
	font-size: 16px;
}

#MacroSelectorDialog #categories .ui-treeview-entry {
	color: #555;
}

#MacroSelectorDialog #categories .ui-treeview-entry:hover {
	box-shadow: inset -6px 0 0 white;
}

#MacroSelectorDialog #categories > tbody > ul > li > ul .ui-treeview-expandable.selected > .ui-treeview::before {
	/* visibility: hidden; hide when javascript sets properly expanders*/
}
/* ... */

